Create User Cart w/ Auth - API Endpoint
